test/langtools/tools/javac/valhalla/lworld-values/WithFieldNegativeTests.out
WithFieldNegativeTests.java:18:14: compiler.err.cant.assign.val.to.final.var: sx
WithFieldNegativeTests.java:38:10: compiler.err.cant.assign.val.to.final.var: x
WithFieldNegativeTests.java:39:10: compiler.err.cant.assign.val.to.final.var: sx
3 errors
